[project]
name = "tagz"
version = "0.7.0"
description = "A lightweight, type-safe Python library for building and parsing HTML documents programmatically without templates"
authors = [{ name = "Dmitry Orlov", email = "orlovdl@gmail.com" }]
requires-python = ">=3.10,<4"
readme = "README.md"
license = { text = "MIT" }
keywords = [
    "html",
    "builder",
    "parser",
    "template",
    "generator",
    "markup",
    "dom",
    "type-safe",
    "streaming",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: HTML",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/mosquito/tagz"
Repository = "https://github.com/mosquito/tagz"
Documentation = "https://github.com/mosquito/tagz#readme"
"Bug Tracker" = "https://github.com/mosquito/tagz/issues"

[dependency-groups]
dev = [
    "mypy>=1.5.1,<2",
    "pytest>=7.4.2,<8",
    "pytest-cov>=4.1.0,<5",
    "coveralls>=3.3.1,<4",
    "markdown-pytest>=0.3.2",
    "pytest-benchmark>=5.0.1",
]

[tool.hatch.build.targets.sdist]
include = ["tagz.py"]

[tool.hatch.build.targets.wheel]
include = ["tagz.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = false
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
follow_imports = "silent"
no_implicit_reexport = true
strict_optional = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
files = [
    "tagz.py",
]
